// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Karura dex > stable swap works > events 1`] = `
[
  {
    "data": {
      "liquidityChanges": [
        "(rounded 20000000000)",
        1000000000000,
      ],
      "path": [
        {
          "Token": "KSM",
        },
        {
          "Token": "KUSD",
        },
      ],
      "trader": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Swap",
    "section": "dex",
  },
]
`;

exports[`Karura dex > stable swap works > events 2`] = `
[
  {
    "data": {
      "newBalances": [
        "(rounded 1000000000000000000)",
        "(rounded 30000000000000000)",
        "(rounded 30000000000000000)",
      ],
      "oldBalances": [
        "(rounded 1000000000000000000)",
        "(rounded 30000000000000000)",
        "(rounded 30000000000000000)",
      ],
      "poolId": 1,
    },
    "method": "BalanceUpdated",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": 10000,
      "amount": "(rounded 500000000)",
      "newBalances": [
        "(rounded 1000000000000000000)",
        "(rounded 30000000000000000)",
        "(rounded 30000000000000000)",
      ],
      "newTotalSupply": "(rounded 1000000000000000000)",
      "oldBalances": [
        "(rounded 1000000000000000000)",
        "(rounded 30000000000000000)",
        "(rounded 30000000000000000)",
      ],
      "oldTotalSupply": "(rounded 1000000000000000000)",
      "poolId": 1,
      "who": "qbK5taeJoMcwJoK3hZ7W8y2KkGu1iDRUvjrg9xQMsUKrrv7",
    },
    "method": "FeeCollected",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": 10000,
      "balances": [
        "(rounded 1000000000000000000)",
        "(rounded 30000000000000000)",
        "(rounded 30000000000000000)",
      ],
      "inputAmount": 1000000000000,
      "inputAsset": {
        "Token": "KUSD",
      },
      "minOutputAmount": 0,
      "outputAmount": "(rounded 600000)",
      "outputAsset": {
        "ForeignAsset": 7,
      },
      "poolId": 1,
      "swapper": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "totalSupply": "(rounded 1000000000000000000)",
    },
    "method": "TokenSwapped",
    "section": "stableAsset",
  },
]
`;

exports[`Karura dex > stable swap works 1`] = `
{
  "free": 1000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura dex > stable swap works 2`] = `
{
  "free": "(rounded 100000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura dex > stable swap works 3`] = `
{
  "free": 0,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura dex > stable swap works 4`] = `
{
  "free": "(rounded 640000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura dex > with liquidity > mint works > system events 1`] = `
[
  {
    "data": {
      "newBalances": [
        "(rounded 9000000000000000)",
        "(rounded 10000000000000000)",
      ],
      "oldBalances": [
        "(rounded 9000000000000000)",
        "(rounded 10000000000000000)",
      ],
      "poolId": 0,
    },
    "method": "BalanceUpdated",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": 3000,
      "balances": [
        "(rounded 9000000000000000)",
        "(rounded 10000000000000000)",
      ],
      "feeAmount": 0,
      "inputAmounts": [
        1000000000000,
        10000000000000,
      ],
      "minOutputAmount": 0,
      "minter": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "outputAmount": "(rounded 10000000000000)",
      "poolId": 0,
      "totalSupply": "(rounded 20000000000000000)",
    },
    "method": "Minted",
    "section": "stableAsset",
  },
]
`;

exports[`Karura dex > with liquidity > mint works 1`] = `
{
  "free": "(rounded 11000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura dex > with liquidity > mint works 2`] = `
{
  "free": 99000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura dex > with liquidity > mint works 3`] = `
{
  "free": "(rounded 920000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura dex > with liquidity > redeemProportion works > events 1`] = `
[
  {
    "data": {
      "newBalances": [
        "(rounded 8900000000000000)",
        "(rounded 13000000000000000)",
      ],
      "oldBalances": [
        "(rounded 8900000000000000)",
        "(rounded 13000000000000000)",
      ],
      "poolId": 0,
    },
    "method": "BalanceUpdated",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": 3000,
      "amount": 2,
      "newBalances": [
        "(rounded 8900000000000000)",
        "(rounded 13000000000000000)",
      ],
      "newTotalSupply": "(rounded 22000000000000000)",
      "oldBalances": [
        "(rounded 8900000000000000)",
        "(rounded 13000000000000000)",
      ],
      "oldTotalSupply": "(rounded 22000000000000000)",
      "poolId": 0,
      "who": "qbK5taeJoMcwJoK3hZ7W8y2KkGu1iDRUvjrg9xQMsUKrrv7",
    },
    "method": "FeeCollected",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": 3000,
      "balances": [
        "(rounded 8900000000000000)",
        "(rounded 13000000000000000)",
      ],
      "feeAmount": "(rounded 33000000000)",
      "inputAmount": "(rounded 11000000000000)",
      "minOutputAmounts": [
        0,
        0,
      ],
      "outputAmounts": [
        "(rounded 4500000000000)",
        "(rounded 6500000000000)",
      ],
      "poolId": 0,
      "redeemer": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "totalSupply": "(rounded 22000000000000000)",
    },
    "method": "RedeemedProportion",
    "section": "stableAsset",
  },
]
`;

exports[`Karura dex > with liquidity > redeemProportion works 1`] = `
{
  "free": 0,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura dex > with liquidity > redeemProportion works 2`] = `
{
  "free": "(rounded 100000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura dex > with liquidity > redeemProportion works 3`] = `
{
  "free": "(rounded 970000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura dex > with liquidity > stableAssetRedeemSingle works > events 1`] = `
[
  {
    "data": {
      "newBalances": [
        "(rounded 8900000000000000)",
        "(rounded 13000000000000000)",
      ],
      "oldBalances": [
        "(rounded 8900000000000000)",
        "(rounded 13000000000000000)",
      ],
      "poolId": 0,
    },
    "method": "BalanceUpdated",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": 3000,
      "amount": 1,
      "newBalances": [
        "(rounded 8900000000000000)",
        "(rounded 13000000000000000)",
      ],
      "newTotalSupply": "(rounded 22000000000000000)",
      "oldBalances": [
        "(rounded 8900000000000000)",
        "(rounded 13000000000000000)",
      ],
      "oldTotalSupply": "(rounded 22000000000000000)",
      "poolId": 0,
      "who": "qbK5taeJoMcwJoK3hZ7W8y2KkGu1iDRUvjrg9xQMsUKrrv7",
    },
    "method": "FeeCollected",
    "section": "stableAsset",
  },
  {
    "data": {
      "a": 3000,
      "balances": [
        "(rounded 8900000000000000)",
        "(rounded 13000000000000000)",
      ],
      "feeAmount": "(rounded 33000000000)",
      "inputAmount": "(rounded 11000000000000)",
      "minOutputAmount": 0,
      "outputAmount": "(rounded 11000000000000)",
      "outputAsset": {
        "Token": "KSM",
      },
      "poolId": 0,
      "redeemer": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
      "totalSupply": "(rounded 22000000000000000)",
    },
    "method": "RedeemedSingle",
    "section": "stableAsset",
  },
]
`;

exports[`Karura dex > with liquidity > stableAssetRedeemSingle works 1`] = `
{
  "free": 0,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Karura dex > with liquidity > stableAssetRedeemSingle works 2`] = `
{
  "free": "(rounded 110000000000000)",
  "frozen": 0,
  "reserved": 0,
}
`;
